[package]
name = "etmem-rs"
version = "0.1.0"
description = "Rust interface for ETMEM (Enhanced Tiered Memory) kernel subsystem"
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitflags = { version = "2.10", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.10"
