[package]
name = "ubfwctl"
version = "0.1.0"
description = "Rust interface for UB fwctl kernel framework"
license = "MIT"
keywords = ["ub", "fwctl", "kernel", "ioctl"]
categories = ["hardware", "kernel"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
